# python-code-snippets

cookiecutter-generic/: README.rst  example_config.yaml  pyproject.toml
cookiecutter-generic/cookiecutter_generic/: __init__.py  run.py
cookiecutter-generic/hooks/: post_gen_project.py
cookiecutter-generic/tests/: __init__.py
cookiecutter-generic/{{cookiecutter.project_slug}}/: noxfile.py  pyproject.toml  scripts.py
cookiecutter-generic/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
cookiecutter-generic/{{cookiecutter.project_slug}}/docs/: conf.py
cookiecutter-generic/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
cookiecutter-pypackage/: cookiecutter.json
cookiecutter-pypackage/hooks/: post_gen_project.py
cookiecutter-pypackage/{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  README.rst  noxfile.py
design-patterns/architectural boundaries/facade/: controller.py  facade.puml  main.py  presenters.py  use_cases.py
design-patterns/architectural boundaries/full boundary/: full boundary.puml  main.py  presenters.py  use_cases.py
design-patterns/architectural boundaries/strategy/: controller.py  main.py  strategy.puml  use_cases.py
design-patterns/dependency-injection/: diagram.puml  main.py
design-patterns/dependency-injection/app/: __init__.py
design-patterns/dependency-injection/service_two_string/: __init__.py
design-patterns/dependency-injection/services/: __init__.py  service_one_string.py
design-patterns/dependency-inversion/: main.py
design-patterns/dependency-inversion/app/: __init__.py
design-patterns/dependency-inversion/service_one_int/: __init__.py
design-patterns/dependency-inversion/service_two_int/: __init__.py
simple-cli/src/simple_cli/: __init__.py
simple-pipeline/: README.md  pyproject.toml
simple-pipeline/src/simple_pipeline/: __init__.py
simple-pipeline/tests/: conftest.py  test_simple_pipeline.py
super-simple-pipeline/: README.md  pyproject.toml
super-simple-pipeline/src/super_simple_pipeline/: __init__.py  pipeline.py  steps.py
super-simple-pipeline/tests/: main.py  test_pipelines.py
web-dev/apis/simple_fastapi_rest_api/: AUTHORS.rst  CONTRIBUTING.rst  README.rst  main.py  pyproject.toml  scripts.py
web-dev/apis/simple_fastapi_rest_api/docs/: conf.py  index.rst  installation.rst  usage.rst
web-dev/apis/simple_fastapi_rest_api/simple_fastapi_rest_api/: __init__.py  cli.py
web-dev/apis/simple_fastapi_rest_api/tests/: __init__.py  test_simple_fastapi_rest_api.py
web-dev/apis/simple_flask_rest_api/: Dockerfile  Dockerfile_aws  Dockerfile_azure  Dockerfile_gcp  LICENSE  README.rst  noxfile.py  pyproject.toml  scripts.py
web-dev/apis/simple_flask_rest_api/.github/: ISSUE_TEMPLATE.md
web-dev/apis/simple_flask_rest_api/simple_flask_rest_api/: __init__.py  app.py  db.py  views.py
web-dev/apis/simple_flask_rest_api/simple_flask_rest_api/db/: db.py
web-dev/apis/simple_flask_rest_api/simple_flask_rest_api/templates/: index.html  page_not_found.html
web-dev/apis/simple_flask_rest_api/tests/: __init__.py  conftest.py  test_db.py  test_factory.py  test_simple_flask_rest_api.py
