[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_pipeline"
version = "1.0.0"
authors = [
  { name="Piotr Tchir" },
]
description = "An almost minimal implementation of a data processing pipeline"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/zapp29/python-code-snippets"