[tool]
[tool.poetry]
name = "simple_flask_rest_api"
version = "0.1.0"
homepage = "https://github.com/zapp29/simple_flask_rest_api"
description = "Top-level package for simple-flask-rest-api."
authors = ["Piotr Tchir <piotr.tchir@codeaddicts.pl>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "simple_flask_rest_api" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
flask = "^2.2.2"

[tool.poetry.scripts]
init = 'scripts:init'
fix = 'scripts:fix'
tests = 'scripts:tests'
docs = 'scripts:docs'
debug = 'scripts:debug'
app = 'scripts:app'
deploy = 'scripts:deploy'

[tool.poetry.group.dev.dependencies]
nox = "^2022.11.21"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = "tests"

[tool.mypy]
ignore_missing_imports = true
